--- a/JavascriptLearning/Projects/contactList/index.html
+++ b/JavascriptLearning/Projects/contactList/index.html
@@ -21,6 +21,9 @@
                 <a href="#"> Abe </a>                
             </li>
             <li class="collection-item">
+                <a href="#"> Abigal </a>                
+            </li>
+            <li class="collection-item">
                 <a href="#"> Alan </a>                
             </li>
             <li class="collection-item">
@@ -92,7 +95,75 @@
             <li class="collection-item">
                 <a href="#"> Erin </a>                
             </li>
-
+            <li class="collection-header">   
+                <h5> F </h5>                
+            </li>
+            <li class="collection-item">
+                <a href="#"> Frank </a>                
+            </li>
+            <li class="collection-item">
+                <a href="#"> Fred </a>                
+            </li>
+            <li class="collection-header">   
+                <h5> G </h5>                
+            </li>
+            <li class="collection-item">
+                <a href="#"> Glen </a>                
+            </li>
+            <li class="collection-item">
+                <a href="#"> Grace </a>                
+            </li>
+            <li class="collection-item">
+                <a href="#"> Greg </a>                
+            </li>
+            <li class="collection-header">   
+                <h5> H </h5>                
+            </li>
+            <li class="collection-item">
+                <a href="#"> Haley </a>                
+            </li>
+            <li class="collection-item">
+                <a href="#"> Hank </a>                
+            </li>
+            <li class="collection-item">
+                <a href="#"> Henry </a>                
+            </li>
+            <li class="collection-header">   
+                <h5> I </h5>                
+            </li>
+            <li class="collection-item">
+                <a href="#"> Imogen </a>                
+            </li>
+            <li class="collection-item">
+                <a href="#"> Isaac </a>                
+            </li>
+            <li class="collection-item">
+                <a href="#"> Isabelle </a>                
+            </li>
+            <li class="collection-header">   
+                <h5> J </h5>                
+            </li>
+            <li class="collection-item">
+                <a href="#"> James </a>                
+            </li>
+            <li class="collection-item">
+                <a href="#"> Jeff </a>                
+            </li>
+            <li class="collection-item">
+                <a href="#"> Jenny </a>                
+            </li>
+            <li class="collection-header">   
+                <h5> K </h5>                
+            </li>
+            <li class="collection-item">
+                <a href="#"> Kate </a>                
+            </li>
+            <li class="collection-item">
+                <a href="#"> Kevin </a>                
+            </li>
+            <li class="collection-item">
+                <a href="#"> Krystal </a>                
+            </li>         
                  
         </ul>
     </div>
