--- a/JavascriptLearning/Projects/todoList/index.html
+++ b/JavascriptLearning/Projects/todoList/index.html
@@ -11,10 +11,11 @@
 
 <body>
     <div class="wrapper">
-        <nav>
-            <h2> To-Do</h2>
-            <h2> List </h2>
-            
+        <header>
+            <h2> To Do Lists </h2>
+        </header>
+        <div class="content">
+        <nav>            
             <ul>
                 <li id="new">New To-Do List</li>
                 <li id="pbj">Sample PBJ Recipe</li>
@@ -41,10 +42,7 @@
             <ul>        
             </ul>
         </main>
-
-        <footer>
-            <p> </p>
-        </footer>
+        </div>
 
         <script src='main.js'></script>
     </div>
