--- a/codeCamp/responsiveProjects/1_tribute/index.html
+++ b/codeCamp/responsiveProjects/1_tribute/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Camp Example 1 - Tribute Page</title>
+    <title>Code Camp Project 1 - Tribute Page</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body> 
