updated title on survey page

--- a/codeCamp/responsiveProjects/2_survey/index.html
+++ b/codeCamp/responsiveProjects/2_survey/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1 id="title"> freeCodeCamp Survey Form </h1>
+        <h1 id="title"> CodeCamp Survey Form </h1>
         <p id="description"> <em> Thank you for taking the time to help us improve the platform </em> </p>
     </header>
 
@@ -37,13 +37,13 @@
                 </select>
             </div>
             <div class="form-div">
-                <label for="recommend" class="display-block"> Would you recommend freeCodeCamp to a friend? </label>
+                <label for="recommend" class="display-block"> Would you recommend CodeCamp to a friend? </label>
                 <input type="radio" name="recommend" value="definitely"> <label for="definitely"> Definitely </label> <br>
                 <input type="radio" name="recommend" value="maybe"> <label for="maybe"> Maybe </label>  <br>
                 <input type="radio" name="recommend" value="not sure"> <label for="not sure"> Not sure </label> <br>
             </div>
             <div class="form-div">
-                <label for="favoritefeature" class="display-block"> What is your favorite feature of freeCodeCamp? </label>            
+                <label for="favoritefeature" class="display-block"> What is your favorite feature of CodeCamp? </label>            
                 <select class="wide-input"  id="favoritefeature">
                     <option value="challenges"> Challenges </option>
                     <option value="community"> Community </option>
@@ -73,8 +73,6 @@
             <input class="wide-input submit"  type="submit" value="Submit">       
 
         </form>
-
-    </div>
-    
+    </div>    
 </body>
 </html>
