--- a/JavascriptLearning/Learning/scratch/scratch.html
+++ b/JavascriptLearning/Learning/scratch/scratch.html
@@ -8,6 +8,86 @@
 <body>
     TEST
     <script>
+        let MORSE_CODE = {
+            '-.-.--': '!',
+            '.-..-.': '"',
+            '...-..-': '$',
+            '.-...': '&',
+            '.----.': '\'',
+            '-.--.': '(',
+            '-.--.-': ')',
+            '.-.-.': '+',
+            '--..--': ',',
+            '-....-': '-',
+            '.-.-.-': '.',
+            '-..-.': '/',
+            '-----': '0',
+            '.----': '1',
+            '..---': '2',
+            '...--': '3',
+            '....-': '4',
+            '.....': '5',
+            '-....': '6',
+            '--...': '7',
+            '---..': '8',
+            '----.': '9',
+            '---...': ':',
+            '-.-.-.': ';',
+            '-...-': '=',
+            '..--..': '?',
+            '.--.-.': '@',
+            '.-': 'A',
+            '-...': 'B',
+            '-.-.': 'C',
+            '-..': 'D',
+            '.': 'E',
+            '..-.': 'F',
+            '--.': 'G',
+            '....': 'H',
+            '..': 'I',
+            '.---': 'J',
+            '-.-': 'K',
+            '.-..': 'L',
+            '--': 'M',
+            '-.': 'N',
+            '---': 'O',
+            '.--.': 'P',
+            '--.-': 'Q',
+            '.-.': 'R',
+            '...': 'S',
+            '-': 'T',
+            '..-': 'U',
+            '...-': 'V',
+            '.--': 'W',
+            '-..-': 'X',
+            '-.--': 'Y',
+            '--..': 'Z',
+            '..--.-': '_',
+            '...---...': 'SOS'
+        }
+
+        decodeMorse = function(morseCode) {
+            let translationArr = [];            
+            
+            let wordArr = morseCode.trim().split('   ');           
+
+            let letterArr = wordArr.map( item => {
+                return item.split(' ');
+            })
+
+            for (let word of letterArr) {
+                let translatedWord = '';
+                for (let letter of word) {
+                    translatedWord += MORSE_CODE[letter];                    
+                }
+                translationArr.push(translatedWord);
+            }
+                        
+            return translationArr.join(' ');
+        }
+
+        decodeMorse('.... . -.--   .--- ..- -.. .') // 'HEY JUDE'
+
 
     </script>
 </body>
