Added jQuery and Sass playgrounds

--- a/JavascriptLearning/Learning/scratch/scratch.html
+++ b/JavascriptLearning/Learning/scratch/scratch.html
@@ -8,86 +8,25 @@
 <body>
     TEST
     <script>
-        let MORSE_CODE = {
-            '-.-.--': '!',
-            '.-..-.': '"',
-            '...-..-': '$',
-            '.-...': '&',
-            '.----.': '\'',
-            '-.--.': '(',
-            '-.--.-': ')',
-            '.-.-.': '+',
-            '--..--': ',',
-            '-....-': '-',
-            '.-.-.-': '.',
-            '-..-.': '/',
-            '-----': '0',
-            '.----': '1',
-            '..---': '2',
-            '...--': '3',
-            '....-': '4',
-            '.....': '5',
-            '-....': '6',
-            '--...': '7',
-            '---..': '8',
-            '----.': '9',
-            '---...': ':',
-            '-.-.-.': ';',
-            '-...-': '=',
-            '..--..': '?',
-            '.--.-.': '@',
-            '.-': 'A',
-            '-...': 'B',
-            '-.-.': 'C',
-            '-..': 'D',
-            '.': 'E',
-            '..-.': 'F',
-            '--.': 'G',
-            '....': 'H',
-            '..': 'I',
-            '.---': 'J',
-            '-.-': 'K',
-            '.-..': 'L',
-            '--': 'M',
-            '-.': 'N',
-            '---': 'O',
-            '.--.': 'P',
-            '--.-': 'Q',
-            '.-.': 'R',
-            '...': 'S',
-            '-': 'T',
-            '..-': 'U',
-            '...-': 'V',
-            '.--': 'W',
-            '-..-': 'X',
-            '-.--': 'Y',
-            '--..': 'Z',
-            '..--.-': '_',
-            '...---...': 'SOS'
-        }
 
-        decodeMorse = function(morseCode) {
-            let translationArr = [];            
-            
-            let wordArr = morseCode.trim().split('   ');           
+        function order(words) {
+            debugger;
+            let arr = words.split(' ');
+            let currentOrder = 1;
+            let orderedString = '';
 
-            let letterArr = wordArr.map( item => {
-                return item.split(' ');
-            })
-
-            for (let word of letterArr) {
-                let translatedWord = '';
-                for (let letter of word) {
-                    translatedWord += MORSE_CODE[letter];                    
+            while (currentOrder <= arr.length){
+            for (let i = 0; i < arr.length; i++) {
+                for (let j = 0; j < arr[i].length; j++) {
+                    if (arr[i][j] == currentOrder) {
+                        currentOrder++;
+                        orderedString = orderedString + arr[i] + ' ';
+                    }
                 }
-                translationArr.push(translatedWord);
             }
-                        
-            return translationArr.join(' ');
         }
-
-        decodeMorse('.... . -.--   .--- ..- -.. .') // 'HEY JUDE'
-
+             return orderedString.trim();
+        }
 
     </script>
 </body>
