updated learning files

--- a/ReactLearning/reactPlayground/reactPlayground.html
+++ b/ReactLearning/reactPlayground/reactPlayground.html
@@ -24,5 +24,8 @@
   <!-- Load our React component. -->
   <script src="like_button.js"></script>
   
+
+  <div id="challenge-node"></div>
+  
 </body>
 </html>
